# flashsupport-platform

./: .env.public.dev  .env.public.empty  .env.public.prod  .gitignore  README.md  docker-compose.yml
services/Auth Service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
services/Auth Service/config/: base.yaml  dev.yaml  prod.yaml
services/Auth Service/src/: domain.py  main.py  models.py  routers.py  services.py
services/Chat Orchestrator/: .dockerignore  .env.dev  .env.example  .env.prod  .gitignore  Dockerfile  README.md  pyproject.toml
services/Chat Orchestrator/config/: base.yaml  dev.yaml  prod.yaml
services/Chat Orchestrator/config/keys/services/: chat-orchestrator.private.pem  chat-orchestrator.public.pem
services/Chat Orchestrator/migrations/: .gitkeep
services/Chat Orchestrator/src/: domain.py  main.py  models.py  routes.py  service.py
services/Chat Orchestrator/src/infrastructure/: __init__.py  auth_client.py  config.py  repositories.py  security.py
services/Chat Orchestrator/tests/contract/: test_chat_contract.py
services/Chat Orchestrator/tests/integration/: test_chat_api.py  test_health_api.py
services/Chat Orchestrator/tests/unit/: test_chat_service.py
services/LLM Runtime/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
services/LLM Runtime/.venv311/: pyvenv.cfg
services/LLM Runtime/config/: base.yaml  dev.yaml  prod.yaml
services/LLM Runtime/config/keys/services/: llm-runtime.public.pem
services/LLM Runtime/src/: domain.py  main.py  models.py  routers.py  services.py
services/LLM Runtime/src/infrastructure/: auth_client.py  config.py  ollama_client.py
services/LLM Runtime/tests/contract/: test_inference_contract.py
services/LLM Runtime/tests/integration/: test_health_api.py  test_inference_api.py
services/LLM Runtime/tests/unit/: test_inference_service.py
services/RAG Engine/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
services/RAG Engine/config/: base.yaml  prod.yaml
services/RAG Engine/src/: domain.py  main.py  models.py  routers.py  services.py
services/RAG Engine/src/infrastructure/: config.py  db.py  llm_runtime_repository.py  search_repository.py
services/RAG Engine/tests/contract/: test_search_contract.py
services/RAG Engine/tests/integration/: test_search_api.py
services/RAG Engine/tests/unit/: test_search_service.py
services/Web Service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.server.json
(+32 files in other folders)
